# desarrollo_social

./: .gitignore
backend/gestor_modulos/: pyproject.toml
backend/gestor_modulos/core/fastapi/dependencies/: logging.py
backend/gestor_programas/: pyproject.toml
backend/legajo/: pyproject.toml
backend/legajo/api/: __init__.py
backend/legajo/api/legajos/: __init__.py
backend/legajo/api/legajos/v1/: __init__.py  legajos.py
backend/legajo/api/legajos/v1/request/: __init__.py  legajo.py
backend/legajo/app/legajo/dependencies/: legajo.py
backend/legajo/app/legajo/exceptions/: __init__.py  legajos.py
backend/legajo/app/legajo/repository/: legajo.py
backend/legajo/app/legajo/services/: legajo.py
backend/legajo/core/config/: settings.py
backend/legajo/models/: __init__.py  legajo.py
backend/users/: pyproject.toml
backend/users/api/: __init__.py
backend/users/api/users/: __init__.py
backend/users/api/users/v1/: __init__.py  users.py
backend/users/app/: __init__.py
backend/users/app/user/dependencies/: user.py
backend/users/app/user/exceptions/: __init__.py  users.py
backend/users/core/database/: initialization.py  session.py
backend/users/models/: __init__.py  user.py
frontend/desarrollo-social/: package-lock.json  package.json
frontend/desarrollo-social/app/: layout.tsx
frontend/desarrollo-social/theme/tokens/: fonts.ts
frontend/keneric/: package-lock.json  package.json
frontend/keneric/app/: globals.css  page.tsx
frontend/keneric/app/backoffice/: layout.tsx  page.tsx
frontend/keneric/components/ui/: provider.tsx
(+55 files in other folders)
