[project]
name = "gestor_programas"
version = "0.1.0"
description = "Microservicio de gestor_programas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.115.11",
    "pika>=1.3.2",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.0",
]
